--- a/images/fontend.html
+++ b/images/fontend.html
@@ -85,9 +85,9 @@
         </div>
     <div class="card2">
         <div class="item2"><h4>PERFUME<h4></div>
-        <div class="item3"><h2><b>Gabrielle <br> Essence Eau<br> De Parfum</b></h2>
+        <div class="item3">Gabrielle Essence EauDe Parfum</h2>
         </div>
-        <p> A floral, solar and voluptuous<br>interpretation composed by<br>Olivier Polge, perfumer-Creator<br>for the House of CHANEL</p>
+        <p> A floral, solar and voluptuous interpretation composed by Olivier Polge, perfumer-Creator for the House of CHANEL</p>
         <div class="item5"><span class="price">$149.99</span><span class="price1">$169.99</span></div>
         <br>
         <br>
